--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "lint": "eslint . --fix --ignore-path .gitignore",
     "type": "tsc --pretty",
     "pre-push": "yarn format && yarn lint && yarn type",
-    "test": "jest"
+    "test": "jest",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@material-ui/core": "^4.11.2",
     "antd": "^4.9.4",
+    "graphql": "^15.4.0",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -30,6 +33,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "1.20.0",
+    "@graphql-codegen/fragment-matcher": "2.0.1",
+    "@graphql-codegen/typescript": "1.20.0",
+    "@graphql-codegen/typescript-operations": "1.17.13",
+    "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@testing-library/react": "^11.2.2",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.16",
