--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "recordrtc": "^5.6.1",
+    "recordrtc": "git+https://github.com/headstartsv-icecream/RecordRTC.git",
     "sanitize.css": "^12.0.1",
     "styled-components": "^5.2.1"
   },
