--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@babel/core": "^7.12.10",
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "1.20.0",
