Modify css layout and styles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,8 +45,8 @@
 
     "import/no-unresolved": "off",
 
-    "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    //"jsx-a11y/click-events-have-key-events": "off",
+    //"jsx-a11y/no-noninteractive-element-interactions": "off",
 
     "node/no-missing-import": "off",
     "node/no-unpublished-import": "off",
