--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@apollo/client": "^3.3.6",
     "@material-ui/core": "^4.11.2",
     "@react-hook/window-scroll": "^1.3.0",
-    "antd": "^4.9.4",
+    "antd": "^4.10.2",
     "graphql": "^15.4.0",
     "next": "^10.0.4",
     "next-images": "^1.6.2",
@@ -49,10 +49,11 @@
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/recordrtc": "^5.6.3",
     "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
