--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@react-hook/window-scroll": "^1.3.0",
     "antd": "^4.10.2",
     "graphql": "^15.4.0",
