--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "type": "tsc --pretty",
     "pre-push": "yarn format && yarn lint && yarn type",
     "test": "jest",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@apollo/client": "^3.3.6",
@@ -43,6 +45,10 @@
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-operations": "1.17.13",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/react": "^6.1.14",
     "@testing-library/react": "^11.2.2",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/gtag.js": "^0.0.4",
