--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@apollo/client": "^3.3.6",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@react-hook/window-scroll": "^1.3.0",
     "@types/nprogress": "^0.2.0",
     "@types/react-infinite-scroller": "^1.2.1",
